--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^19.0.0",
+    "react-code-blocks": "^0.1.6",
     "react-dom": "^19.0.0",
+    "react-latex-next": "^3.0.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "react-showdown": "^2.3.1",
+    "react-textarea-autosize": "^8.5.7",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
