--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "react-showdown": "^2.3.1",
+    "react-spinners": "^0.15.0",
     "react-textarea-autosize": "^8.5.7",
     "web-vitals": "^4.2.4"
   },
