--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-showdown": "^2.3.1",
     "react-spinners": "^0.15.0",
     "react-textarea-autosize": "^8.5.7",
+    "remixicon": "^4.6.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
