--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "license": "^1.0.3",
     "react": "^19.0.0",
     "react-code-blocks": "^0.1.6",
     "react-dom": "^19.0.0",
@@ -77,5 +78,6 @@
     "cross-env": "^7.0.3",
     "electron": "^34.1.1",
     "electron-builder": "^25.1.8"
-  }
+  },
+  "license": "0BSD"
 }
