--- a/package.json
+++ b/package.json
@@ -51,13 +51,16 @@
       "public/preload.js"
     ],
     "win": {
-      "target": "nsis"
+      "target": "nsis",
+      "icon": "public/favicon.ico"
     },
     "mac": {
-      "target": "dmg"
+      "target": "dmg",
+      "icon": "public/favicon.ico"
     },
     "linux": {
-      "target": "AppImage"
+      "target": "AppImage",
+      "icon": "public/favicon.ico"
     }
   },
   "browserslist": {
